[Fixed] import modal issue and img not showing on production at wallet creation (#13)

--- a/src/components/Inputs/Inputs.scss
+++ b/src/components/Inputs/Inputs.scss
@@ -37,11 +37,11 @@
         &:checked {
             &::before {
                 color: #321c3b;
-                opacity: 50%;
+                opacity: 0.5;
             }
             &::after {
                 color: white;
-                opacity: 100%;
+                opacity: 1;
             }
         }
         &::before {
@@ -51,13 +51,13 @@
             margin-left: 0.5rem;
             margin-right: 0.45rem;
             color: white;
-            opacity: 100%;
+            opacity: 1;
         }
         &::after {
             content: attr(data-on-label);
             font-size: 12px;
             color: #321c3b;
-            opacity: 50%;
+            opacity: 0.5;
         }
     }
 }
